<!--
 * Copyright (C) 2014 XiaoXia(http://xiaoxia.de/)
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
    <string name="app_name">X MoreTimeText</string>
    <string name="about">About X MoreTimeText</string>
    <string name="about_msg"><b>Glad to see this app on your Android &lt;3</b>\n\nBlog: <a href="http://xiaoxia.de/">xiaoxia.de</a>\n\nDonate: \n<a href="http://xiaoxia.de/upload/donation.html">xiaoxia.de/upload/donation.html</a></string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="customize">Customize</string>
    <string name="basic">Basic settings</string>
    <string name="filter">Filter</string>
    <string name="ps">Start</string>
    <string name="pe">End</string>
    <string name="pt">Title</string>
    <string name="tp">Time Period</string>
    <string name="notset">Not Set</string>
    <string name="filter_summary_off">Remain original AM/PM text</string>
    <string name="filter_summary_on">Remove original AM/PM text</string>
    <string name="customize_summary_on">Append your own additional text to the clock</string>
    <string name="customize_summary_off">Append default built-in text to the clock</string>
    <string name="clear">Clear time period settings</string>
    <string name="clear_msg">"Are you sure to clear all time period settings?\n\nYou can't undo this operation."</string>
    <string name="help">Help</string>
    <string name="help_msg">No data validity check. Make sure your time period settings are correct.\n\nTime period title is optional and using less letters is better.\n\nIf time periods are duplicated or conflicted, the prior one in the list has higher priority.\n\nDo not set a time period over / ended at 00:00. Set AA:BB ~ 23:59 and 00:00 ~ CC:DD instead.</string>
    <string name="desc">"Totally customize your clock text.
[Touch here for settings. Reboot to apply.]"</string>
    <string name="position">Text Position</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_s">left</string>
    <string name="right_s">right</string>
    <string name="position_summary_1">"Append to the "</string>
    <string name="position_summary_2">" side of the clock"</string>
    <string name="s13">1.3 X</string>
    <string name="s12">1.2 X</string>
    <string name="s11">1.1 X</string>
    <string name="s10">1.0 X(Default)</string>
    <string name="s09">0.9 X</string>
    <string name="s08">0.8 X</string>
    <string name="s07">0.7 X</string>
    <string name="s06">0.6 X</string>
    <string name="s05">0.5 X</string>
    <string name="date">Date text settings</string>
    <string name="basic_first">Info text first</string>
    <string name="date_first">Date text first</string>
    <string name="display_date">Additional Date Text</string>
    <string name="display_date_summary_off">No operation</string>
    <string name="display_date_summary_on">Append date to the clock</string>
    <string name="size">Text Size</string>
    <string name="priority_date">Info and date text priority(same side)</string>
    <string name="format_date">Date Format</string>
    <string name="format_msg">"yy [yyyy] = Year (14 [2014])\nM [MM, MMM] = Month (8 [08, Aug])\nd [dd] = Day (1 [01])\nE = Day of week (Mon)\nHH [H, hh, h] = Hour (13 [13, 01, 1])\nmm [m] = Minute (02 [2])\n## = Time Peorid Info Text\n\nNote: Please reference the document of SimpleDateFormat. Do not add any illegal letter.\n\nQuote the words you don't want them converted to date or time by quotation marks."</string>
    <string name="customize_setting">Custom time period settings</string>
    <string name="info">Info text based on time period settings</string>
    <string name="clock">Show Stock Clock</string>
    <string name="clock_summary_off">Hide stock clock</string>
    <string name="clock_summary_on">Show stock clock</string>
    <string name="basic_info">Additional Info Text</string>
    <string name="basic_info_summary_off">No operation</string>
    <string name="basic_info_summary_on">Append info to the clock</string>
    <string name="press_color_to_apply">Press color to apply</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="color_summary_on">Customized color</string>
    <string name="color_summary_off">System default</string>
    <string name="color">Text Color</string>
    <string name="color_summary">Pick your prefer text color</string>
    <string name="color_s">Custom Text Color</string>
    <string name="force">Force To Apply</string>
    <string name="force_summary_off">Only turn on if no effect</string>
    <string name="force_summary_on">Hook textview instead</string>
    <string name="center">Center Clock</string>
    <string name="center_summary_off">System default</string>
    <string name="center_summary_on">Center clock</string>
    <string name="cat_clock">Stock Clock settings</string>
    <string name="second">Enable Seconds</string>
    <string name="second_note">The stock clock is enabled to display seconds.\n\nThis will cost a little more resource.\nOnly turn on this if you really need.</string>
    <string name="second_summary_off">System default</string>
    <string name="second_summary_on">Count every second</string>
    <string name="cat_surrounding">Surrounding text settings</string>
    <string name="surrounding">Additional Surrounding Text</string>
    <string name="surrounding_summary_off">No operation</string>
    <string name="surrounding_summary_on">Append fixed text to the clock</string>
    <string name="surrounding_msg">Leave blank to cancel</string>
    <string name="surrounding_left">Left Side Text</string>
    <string name="surrounding_right">Right Side Text</string>
    <string name="surrounding_position_in">Out of clock text</string>
    <string name="surrounding_position_out">Out of all text</string>
</resources>