<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="cat_basic" android:title="@string/basic">
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="center" android:summaryOff="@string/center_summary_off" android:summaryOn="@string/center_summary_on" android:title="@string/center"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="force" android:summaryOff="@string/force_summary_off" android:summaryOn="@string/force_summary_on" android:title="@string/force"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="cat_clock" android:title="@string/cat_clock">
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="true" android:key="clock" android:summaryOff="@string/clock_summary_off" android:summaryOn="@string/clock_summary_on" android:title="@string/clock"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="clock" android:key="filter" android:summaryOff="@string/filter_summary_off" android:summaryOn="@string/filter_summary_on" android:title="@string/filter"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="clock" android:key="second" android:summaryOff="@string/second_summary_off" android:summaryOn="@string/second_summary_on" android:title="@string/second"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="clock" android:key="color_clock_s" android:summaryOff="@string/color_summary_off" android:summaryOn="@string/color_summary_on" android:title="@string/color_s"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference android:defaultValue="0xFF000000" android:dependency="color_clock_s" android:key="color_clock" android:summary="@string/color_summary" android:title="@string/color"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="cat_surrounding" android:title="@string/cat_surrounding">
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="surrounding" android:summaryOff="@string/surrounding_summary_off" android:summaryOn="@string/surrounding_summary_on" android:title="@string/surrounding"/>
        <ListPreference android:dependency="surrounding" android:defaultValue="true" android:key="surrounding_position" android:title="@string/position" android:negativeButtonText="@string/cancel" android:dialogTitle="@string/position" android:positiveButtonText="@string/ok" android:entryValues="@array/surrounding_position_values" android:entries="@array/surrounding_position"/>
        <EditTextPreference android:dependency="surrounding" android:dialogMessage="@string/surrounding_msg" android:dialogTitle="@string/surrounding_left" android:key="surrounding_left" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:singleLine="true" android:title="@string/surrounding_left"/>
        <EditTextPreference android:dependency="surrounding" android:dialogMessage="@string/surrounding_msg" android:dialogTitle="@string/surrounding_right" android:key="surrounding_right" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:singleLine="true" android:title="@string/surrounding_right"/>
        <ListPreference android:defaultValue="1.0" android:dependency="surrounding" android:dialogTitle="@string/size" android:entries="@array/size" android:entryValues="@array/size_values" android:key="size_surrounding" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/size"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="surrounding" android:key="color_surrounding_s" android:summaryOff="@string/color_summary_off" android:summaryOn="@string/color_summary_on" android:title="@string/color_s"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference android:defaultValue="0xFF000000" android:dependency="color_surrounding_s" android:key="color_surrounding" android:summary="@string/color_summary" android:title="@string/color"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="cat_info" android:title="@string/info">
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="basic_info" android:summaryOff="@string/basic_info_summary_off" android:summaryOn="@string/basic_info_summary_on" android:title="@string/basic_info"/>
        <ListPreference android:defaultValue="true" android:dependency="basic_info" android:dialogTitle="@string/position" android:entries="@array/position" android:entryValues="@array/position_values" android:key="position" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/position"/>
        <ListPreference android:defaultValue="1.0" android:dependency="basic_info" android:dialogTitle="@string/size" android:entries="@array/size" android:entryValues="@array/size_values" android:key="size" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/size"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="basic_info" android:key="color_info_s" android:summaryOff="@string/color_summary_off" android:summaryOn="@string/color_summary_on" android:title="@string/color_s"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference android:defaultValue="0xFF000000" android:dependency="color_info_s" android:key="color_info" android:summary="@string/color_summary" android:title="@string/color"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="customize" android:summaryOff="@string/customize_summary_off" android:summaryOn="@string/customize_summary_on" android:title="@string/customize"/>
        <Preference android:dependency="customize" android:key="setting_customize" android:title="@string/customize_setting">
            <intent android:action="android.intent.action.VIEW" android:targetClass="de.xiaoxia.xmoretimetext.SettingCustomize" android:targetPackage="de.xiaoxia.xmoretimetext"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:key="cat_date" android:title="@string/date">
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:key="display_date" android:summaryOff="@string/display_date_summary_off" android:summaryOn="@string/display_date_summary_on" android:title="@string/display_date"/>
        <EditTextPreference android:dependency="display_date" android:dialogMessage="@string/format_msg" android:dialogTitle="@string/format_date" android:key="format_date" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:singleLine="true" android:title="@string/format_date"/>
        <ListPreference android:defaultValue="true" android:dependency="display_date" android:dialogTitle="@string/priority_date" android:entries="@array/priority" android:entryValues="@array/priority_values" android:key="priority_date" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/priority_date"/>
        <ListPreference android:defaultValue="true" android:dependency="display_date" android:dialogTitle="@string/position" android:entries="@array/position" android:entryValues="@array/position_values" android:key="position_date" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/position"/>
        <ListPreference android:defaultValue="1.0" android:dependency="display_date" android:dialogTitle="@string/size" android:entries="@array/size" android:entryValues="@array/size_values" android:key="size_date" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok" android:title="@string/size"/>
        <de.xiaoxia.xmoretimetext.CustomSwitchPreference android:defaultValue="false" android:dependency="display_date" android:key="color_date_s" android:summaryOff="@string/color_summary_off" android:summaryOn="@string/color_summary_on" android:title="@string/color_s"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference android:defaultValue="0xFF000000" android:dependency="color_date_s" android:key="color_date" android:summary="@string/color_summary" android:title="@string/color"/>
    </PreferenceCategory>
</PreferenceScreen>